# langchain-agentskills

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: hello_world.py  hello_world_middleware.py
examples/skills/hello-world/: SKILL.md
examples/skills/hello-world/references/: greetings.txt
examples/skills/hello-world/scripts/: greet.sh
src/langchain_agentskills/: __init__.py  exceptions.py  executor.py  middleware.py  models.py  parsing.py  toolkit.py
src/langchain_agentskills/loaders/: __init__.py  base.py  composite.py  directory.py
src/langchain_agentskills/tools/: __init__.py  list_skills.py  load_skill.py  read_resource.py  run_script.py
